# open-webui

./: .gitignore  PATCHES.md  hatch_build.py  package.json
.github/workflows/: backend.yaml  build-release.yml  deploy-to-hf-spaces.yml  docker-build.yaml  docker.yaml  format-backend.yaml  format-build-frontend.yaml  frontend.yaml  release-pypi.yml  release.yml  wheel-release.yml
backend/open_webui/: config.py  env.py  main.py
backend/open_webui/routers/: audio.py  files.py  images.py  (+4 more)
deploy/: MEMORY_PRESSURE.md  SETUP.md  WEB_SEARCH.md  apply_local_patches.py  capture_memory_pressure.sh  ensure_default_models.py  ensure_openai_provider_prefixes.py  ensure_user_default_models.py  migrate_sqlite_to_postgres.py  nginx.chat.uh-oh.wtf.conf  pin_open_webui_wheel.sh  pyproject.toml  reapply_after_open_webui_upgrade.sh  sync_openai_provider_keys_from_env.py  upgrade_open_webui.sh  upgrade_open_webui_from_tag.sh  watch_memory_pressure.sh
deploy/livekit/: MOVED.md  agent.py  index.html  livekit.yaml.template  manifest.webmanifest  portal.py  render_phrases_wav.py  setup_self_hosted.py  sw.js
deploy/s6/open-webui/: run
deploy/s6/open-webui-livekit-agent/: run
deploy/s6/open-webui-livekit-agent/log/: run
deploy/s6/open-webui-livekit-portal/: run
deploy/s6/open-webui-livekit-portal/log/: run
deploy/s6/open-webui-livekit-server/: run
deploy/s6/open-webui-livekit-server/log/: run
deploy/s6/open-webui-pressure-watch/: run
deploy/s6/open-webui-pressure-watch/log/: run
deploy/s6/open-webui-serper-tool/: run
deploy/s6/open-webui-serper-tool/log/: run
deploy/s6/open-webui/log/: run
deploy/serper-tool/: server.py
scripts/: pepper-release.sh
(+42 files in other folders)
