[tool.poetry]
name = "open-webui-deploy"
version = "0.1.0"
description = "Deployment wrapper for Open WebUI"
authors = []
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
open-webui = { path = "vendor/open_webui-0.6.43+pepper.1-py3-none-any.whl" }
psycopg2-binary = "^2.9.11"
firecrawl-py = "0.0.16"
livekit-agents = {version = "~1.3.0", extras = ["cartesia", "openai", "turn-detector"]}
livekit-api = "*"
opentelemetry-api = "1.38.0"
opentelemetry-sdk = "1.38.0"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
